--- a/1.12/index.html
+++ b/1.12/index.html
@@ -30,7 +30,8 @@
 						assetsURI: "assets.epw",
 						worldsDB: "worlds",
 						servers: [
-							/* example: { addr: "ws://localhost:8081/", name: "Local test server" } */
+							{ addr: "wss://velocity-mc75.onrender.com/", name: "GamespaceMC" },
+							{ addr: "wss://mc.asspixel.net/", name: "AssPixel" }
 						],
 						relays: [
 							{ addr: "wss://relay.deev.is/", comment: "lax1dude relay #1", primary: relayId == 0 },
