--- a/1.12/index.html
+++ b/1.12/index.html
@@ -30,7 +30,7 @@
 						assetsURI: "assets.epw",
 						worldsDB: "worlds",
 						servers: [
-							{ addr: "wss://velocity-jc6z.onrender.com/", name: "GamespaceMC" },
+							{ addr: "wss://velocity-ewa2.onrender.com/", name: "GamespaceMC" },
 							{ addr: "wss://mc.asspixel.net/", name: "AssPixel" }
 						],
 						relays: [
