--- a/1.12/index.html
+++ b/1.12/index.html
@@ -30,8 +30,16 @@
 						assetsURI: "assets.epw",
 						worldsDB: "worlds",
 						servers: [
-							{ addr: "wss://gamespmc.duckdns.org/", name: "GamespaceMC" },
-							{ addr: "wss://mc.asspixel.net/", name: "AssPixel" }
+							{ addr: "wss://mc.buttassgayscraft.win/", name: "GamespaceMC" },
+							{ addr: "wss://play.zelz.net", name: "ZelzNet" },
+							{ addr: "wss://mc.arch.lol", name: "ArchMC" },
+							{ addr: "wss://beta.arch.lol", name: "§r §r §r §r §4§lArchMC Beta" },
+							{ addr: "wss://mc.lamplifesteal.xyz", name: "LampLifesteal" },
+							{ addr: "wss://mc.ricenetwork.xyz", name: "Rice Network X BallCraft" },
+							{ addr: "wss://clever-teaching.com", name: "Clever Teaching" },
+							{ addr: "wss://mc.asspixel.net", name: "Asspixel Network" },
+							{ addr: "wss://vanillamc.tech", name: "VanillaMC" },
+							{ addr: "wss://aeon-network.net", name: "Aeon Network" }
 						],
 						relays: [
 							{ addr: "wss://relay.deev.is/", comment: "lax1dude relay #1", primary: relayId == 0 },
